# mcp-server-excel

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  ACTION-STANDARDIZATION-PLAN.md  BATCH-API-MIGRATION-PLAN.md  BATCH-CONVERSION-STATUS.md  BREAKING-CHANGES-IMPLEMENTATION-PLAN.md  BREAKING-CHANGES-STATUS.md  BUG-FIX-PRECOMMIT-COVERAGE-CHECK.md  BuildDataModelTemplate.csx  CHANGELOG.md  CODEQL-FIXES-SUMMARY.md  CODEQL-LOCAL-SETUP.md  CODEQL-SUPPRESSION-VERIFICATION.md  COM-INTEROP-REVIEW.md  CORE-COM-API-VALIDATION.md  CORE-COMMANDS-AUDIT.md  CORE-TEST-REFACTORING-GUIDE.md  DATA-MODEL-OPTIMIZATION-STATUS.md  DATA-MODEL-TEST-OPTIMIZATION.md  DATAMODEL-PIVOT-DEMO.md  DEPLOYMENT_FIX_SUMMARY.md  DOCS-FORMATTING-FINAL.md  DOCS-FORMATTING-GUIDANCE-OPTIMIZATION.md  DOCS-STREAMLINING-SUMMARY.md  DOCS-UPDATE-SUMMARY.md  DOCUMENTATION-COMPLETE.md  DOTNET_BEST_PRACTICES_REVIEW.md  Directory.Build.props  Directory.Build.props.user.template  Directory.Build.targets  Directory.Packages.props  Dockerfile  EXCEL-BUILTIN-STYLES-GUIDE.md  EXCEL-FORMATTING-PROMPTS.md  ExcelMcp.sln  FEATURE-BUILTIN-STYLES.md  FEATURES.md  FINAL_SUMMARY.md  (+74 more)
llm-tests/: README.md  cli_mcp_server.py  conftest.py  extract_failures.py  pyproject.toml  pyrightconfig.json
llm-tests/Fixtures/: products-dimension.json  range-test-data.json
llm-tests/cli/: conftest.py  test_cli_calculation_mode.py  test_cli_chart.py  test_cli_chart_positioning.py  test_cli_file_worksheet.py  test_cli_financial_report_automation.py  test_cli_modification_patterns.py  test_cli_pivottable_layout.py  test_cli_range.py  (+5 more)
(+1606 files in other folders)
